Fixed COPY of default events.json file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       dockerfile: Dockerfile
     environment:
       AMQP_HOST: rabbit
+      EVENTS_FILE: data/events.json
     networks:
       default:
         aliases:
