--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,8 @@ services:
       context: .
       dockerfile: Dockerfile
     environment:
-      AMQP_HOST: rabbit
+      RABBIT_HOST: rabbit
+      LIMIT: 500
     networks:
       default:
         aliases:
